# mvstar

./: pyproject.toml
src/mvstar/: companyList.py  movieList.py  parsing.py
tests/: test_movie.py
