[project]
name = "mvstar"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath="src"

[tool.pdm]
distribution = false
